--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
 }
 
 .nav__img--shoping {
+    position: relative;
     width: 2.2rem;
     filter: invert(100%) sepia(52%) saturate(2047%) hue-rotate(152deg) brightness(95%) contrast(84%);
 }
@@ -84,6 +85,20 @@ body {
     cursor: pointer;
     transform: scale(1.15);
     transition: 0.3s;
+}
+
+.count__Shop {
+    position: absolute;
+    top: 5px;
+    width: 28px;
+    height: 25px;
+    background-color: #c4ba2e;
+    padding: 5px;
+    color: black;
+    font-weight: 500;
+    border-radius: 50%;
+    text-align: center;
+
 }
 
  /* --------- this part is for portada -------------*/
@@ -254,6 +269,18 @@ body {
     transform: scale(1.01);
 }
 
+/* ------  para producto agotado --------- */
+
+.btn__nodrop {
+    background-color: #8e3636;
+    color: white;
+    border: none;
+}
+
+.btn__nodrop:hover {
+    background-color: #8e3636;
+    cursor: no-drop;
+}
 /* --------- seccion for clothes buy --------*/
 
 .clothes__buy {
